--- a/Draft14.tex
+++ b/Draft14.tex
@@ -79,7 +79,7 @@
 \date{\today}
 \maketitle
 \begin{abstract}
-Momentum methods play a central role in optimization. Several momentum methods are provably optimal, and all use a technique called {\em estimate sequences} to analyze their convergence properties.  The technique of estimate sequences has long been considered difficult to understand, leading many researchers to generate alternative, ``more intuitive'' methods and analyses. In this paper we show there is an equivalence between the technique of estimate sequences and a family of Lyapunov functions in both continuous and discrete time. This framework allows us to develop a simple and unified analysis of many existing momentum algorithms, introduce several new algorithms, and strengthen the connection between algorithms and continuous-time dynamical systems. 
+Momentum methods play a central role in optimization. Several momentum methods are provably optimal, and all use a technique called {\em estimate sequences} to analyze their convergence properties.  The technique of estimate sequences has long been considered difficult to understand, leading many researchers to generate alternative, ``more intuitive'' methods and analyses. In this paper we show there is an equivalence between the technique of estimate sequences and a family of Lyapunov functions in both continuous and discrete time. This framework allows us to develop a simple and unified analysis of many existing momentum algorithms, introduce several new algorithms, and most importantly, strengthen the connection between algorithms and continuous-time dynamical systems. 
 \end{abstract}
 
 \section{Introduction}
@@ -87,7 +87,7 @@ Momentum methods play a central role in optimization. Several momentum methods a
 Momentum is a powerful heuristic for accelerating the convergence of optimization methods.    One can intuitively ``add momentum'' to a method by adding to the current step a weighted version of the previous step, encouraging the method to move along search directions that had been previously seen to be fruitful.  Such methods were first popularized by Polyak~\cite{Polyak1964}, and have been employed in many practical optimization solvers.  In particular, since the 1980s, momentum methods have been popular in neural networks as a way to accelerate the backpropagation algorithm.  The intuition is that momentum allows local search to avoid ``long ravines'' and ``sharp curvatures'' in the sublevel sets of cost functions~\cite{Rumelhardt}.
 
 Polyak motivated momentum methods by an analogy to a ``heavy ball'' moving in a potential well defined by the cost function.  However, Polyak's physical intuition was exceedingly difficult to make rigorous.  For quadratic costs, Polyak was able to provide an eigenvalue argument that showed that his Heavy Ball method required no more iterations than the method of conjugate gradients~\cite{Polyak1964}.  
-Indeed, when applied to positive definite quadratic cost functions, Polyak's Heavy Ball method is equivalent to Chebyshev's Iterative Method~\cite{Chebyshev}.   Despite its intuitive elegance, Polyak's eigenvalue analysis does not apply globally for general convex functions. Indeed, Lessard~\emph{et al.} derived a simple one-dimensional counterexample where the standard Heavy Ball method does not converge~\cite{Lessard14}.  
+Indeed, when applied to positive definite quadratic cost functions, Polyak's Heavy Ball method is equivalent to Chebyshev's Iterative Method~\cite{Chebyshev}.   Despite its intuitive elegance, Polyak's eigenvalue analysis does not apply globally for general convex cost functions. Indeed, Lessard~\emph{et al.} derived a simple one-dimensional counterexample where the standard Heavy Ball method does not converge~\cite{Lessard14}.  
 
 In order to make momentum methods rigorous, a different approach was required.  In celebrated work, Nesterov devised a general scheme to accelerate convex optimization methods, achieving optimal running times under oracle models in convex programming~\cite{Nesterov04}. However, to achieve such general applicability, Nesterov's proof techniques abandoned the physical intuition of Polyak~\cite{Nesterov04}; in lieu of differential equations and potential functions, Nesterov devised the method of \emph{estimate sequences} to verify the correctness of these momentum-based methods.  Researchers have struggled with understanding the intuition and underpinnings of the estimate sequence methodology since Nesterov's initial papers.  The associated proof techniques are often viewed as an ``algebraic trick.''  
 
@@ -137,7 +137,7 @@ Until recently, this ODE perspective on optimization algorithms was largely aban
  \begin{equation}\label{Eq:SuBoydCandes}
  \ddot X_t + \frac{r}{t} \dot X_t + \nabla f(X_t) = 0,\,\,\,\,r \geq 3.
  \end{equation}
-This is equivalent to~\eqref{eq:heavy-ball-ode} for an object with unit mass, where now the time-dependent damping term $\gamma_t = r\log t$ is logarithmic.  They also established a convergence rate of $O(1/t^2)$ for this continuous-time system via a Lyapunov function argument. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained in passing from continuous time to discrete time. Two things remain unclear from their analysis however:  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection---if any---there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
+This is equivalent to~\eqref{eq:heavy-ball-ode}, where the dynamics model an object with unit mass and the time-dependent damping term $\gamma_t = r\log t$ is logarithmic.  They also established a convergence rate of $O(1/t^2)$ for this continuous-time system via a Lyapunov function argument. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained in passing from continuous time to discrete time. Two things remain unclear from their analysis however:  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection---if any---there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
 
 Krichene, Bartlett and Bayen~\cite{Krichene15} derived a modified accelerated mirror descent algorithm using a ``discretized'' Lyapunov function. However, their proof targeted a different algorithm than the algorithm in Nesterov's original work~\cite{Nesterov05}. In particular, their analysis entailed an additional smoothness assumption which is not necessary for the original algorithm~\cite{Nesterov05}, or for the original proof technique using estimate sequences.\footnote{In particular, they assume $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y) \leq \frac{L}{2}\|x-y\|^2$%, so that for all intensive purposes, their setting is given by the norm
 . This additional assumption greatly simplifies the proof. However, only the assumption of an upper bound is needed for the most general form of accelerated methods is that $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y)$.} See also Nemirovski and Yudin's original work~\cite{NemirovskiiYudin} for a continuous-time perspective on mirror descent and a Lyapunov analysis of convergence.
@@ -205,7 +205,7 @@ and
 \begin{equation}
 f(X_t) - f(x^\ast) \leq \frac{e^{\beta_0}(f(X_0) - f(x^\ast) +\mu D_h(x^\ast ,X_0 -e^{-\alpha_0} \dot X_0))}{e^{\beta_t}},
 \end{equation}
-for~\eqref{Eq:E} and \eqref{eq:general-sc-lyap} respectively. The typical convention is that we start from rest $\dot X_0 = 0$. Notice that we obtain the same rates of convergence in these two settings. However, the family of dynamics corresponding to the Lyapunov function in the strongly convex setting uses the strong convexity of $f$, and this allows us to obtain a tighter bound in discrete time.
+for~\eqref{Eq:E} and \eqref{eq:general-sc-lyap} respectively. The typical convention is that the dynamics start from rest $\dot X_0 = 0$. Notice that we obtain the same rates of convergence in these two settings. However, the family of dynamics corresponding to the Lyapunov function in the strongly convex setting uses the strong convexity of $f$, and this allows us to obtain a tighter bound in discrete time.
 
 
 \section{Momentum Methods}
@@ -219,7 +219,7 @@ We study dynamics that are based on the Euler-Lagrange equation \eqref{Eq:ELBreg
  \frac{d}{dt}\nabla h(Z_t) &= -\dot \beta_t e^{\beta_t} \nabla f(X_t)\label{Eq:ELH}.
  \end{align}
  \end{subequations}
-We begin by demonstrating how to derive the Lyapunov function~\eqref{Eq:E} for the momentum dynamics~\eqref{Eq:ELBreg}; this derivation is similar in spirit to the Lyapunov analysis of mirror descent by Nemirovski and Yudin.
+We begin by demonstrating how to derive the Lyapunov function~\eqref{Eq:E} for the momentum dynamics~\eqref{Eq:EL}; this derivation is similar in spirit to the Lyapunov analysis of mirror descent by Nemirovski and Yudin.
   
 %\begin{small}
 \begin{subequations}\label{Eq:LyapAnal}
@@ -367,7 +367,7 @@ involves applying the implicit Euler method to the mirror descent dynamic, and b
 
 \subsection{The Quasi-Monotone Subgradient Method}
 \label{Sec:QuasiMono}
-The quasi-monotone subgradient method was developed by Nesterov~\cite{Nesterov15} as an alternative to the dual averaging method.  It also achieves the $O(1/\sqrt{k})$ lower bound for the class of methods with bounded subgradients. The advantage of the quasi-monotone method however is that a convergence-rate guarantee can be shown for the entire sequence of iterates instead of the average (or minimum) iterate, as is the case with the dual averaging method in the non-Euclidean setting. {\em We begin by studying the quasi-monotone method in the situation where we have full gradients, which we assume to be bounded} and show later how to extend the analysis to incorporate bounded subgradients. We also set the dual averaging term $\gamma_k \equiv 1$ for convenience and give an analysis of the full algorithm in Appendix~\ref{App:ProofQuasiGen}.  With these minor modifications, the algorithm can be understood as the explicit Euler method applied to~\eqref{Eq:Z} and the implicit Euler method applied to~\eqref{Eq:X} (where now, we take $e^{\beta_t} = A_{k+1}$, while leaving our identification for $\frac{d}{dt} e^{\beta_t}$ unchanged):
+The quasi-monotone subgradient method was developed by Nesterov~\cite{Nesterov15} as an alternative to the dual averaging method.  It also achieves the $O(1/\sqrt{k})$ lower bound for the class of methods with bounded subgradients. The advantage of the quasi-monotone method however is that a convergence-rate guarantee can be shown for the entire sequence of iterates instead of the average (or minimum) iterate, as is the case with the dual averaging method in the non-Euclidean setting. {\em We begin by studying the quasi-monotone method in the situation where we have full gradients, which we assume to be bounded} and show later how the analysis extends to the setting where we only have access to bounded subgradients. We also set the dual averaging term $\gamma_k \equiv 1$ for convenience and give an analysis of the full algorithm in Appendix~\ref{App:ProofQuasiGen}.  With these minor modifications, the algorithm can be understood as the explicit Euler method applied to~\eqref{Eq:Z} and the implicit Euler method applied to~\eqref{Eq:X} (where now, we take $e^{\beta_t} = A_{k+1}$, while leaving our identification for $\frac{d}{dt} e^{\beta_t}$ unchanged):
 
 
 
